Fix Testimonial Component UI flickering

--- a/src/index.css
+++ b/src/index.css
@@ -209,15 +209,15 @@ h1,h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: .7rem;
+    font-size: .75rem;
   }
 
   .testimonial-image-container { 
   width: 34%;
   height: 100%;
   margin: 0;
-  margin-top: -15%;
-  margin-bottom: -19%;
+  margin-top: -28%;
+  margin-bottom: -31%;
   } 
 
   .testimonial{ 
